# stratum

./: .gitignore  Cargo.toml  README.md
assets/shaders/: voxel_material.wgsl
assets/textures/blocks/: atlas.ron
benches/: benchmark.rs
data/: biome_template.ron  block_template.ron
data/biomes/: desert.ron  forest.ron  jungle.ron  mountains.ron  plains.ron  tundra.ron
data/blocks/: dirt.ron  grass.ron
data/settings/: settings.ron
src/: debug.rs  lib.rs  main.rs
src/app/: assets.rs  atmosphere.rs  display.rs  lighting.rs  mod.rs  player.rs  setup.rs  streaming.rs
src/atlas/: builder.rs  compat.rs  mod.rs
src/biome/: loader.rs  mod.rs
src/block/: interaction.rs  loader.rs  mod.rs  registry.rs
src/chunk/: debug.rs  frustum.rs  lod.rs  mesh.rs  mod.rs  stats.rs  streaming.rs
src/lighting/: mod.rs
src/material/: mod.rs  voxel_material.rs
src/player/: camera.rs  mod.rs  movement.rs  physics.rs
src/ron/: mod.rs
src/settings/: loader.rs  mod.rs
src/ui/: mod.rs
src/world/: mod.rs
